Bug #3778 - java.lang.ClassCastException: android.support.v7.widget.RecyclerView cannot be cast to android.widget.ListView

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name" context="Not translate">MEGAv3</string>
+    <string name="app_name" context="Not translate">MEGAv3 BETA</string>
     <string name="app_version" context="Not translate">3.0.beta</string>
     <string name="sdk_version" context="Not translate">b6b16a4</string>
     
