--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -286,6 +286,7 @@
     <string name="context_adding_contact" context="Adding a new relationship (contact)">Añadiendo contacto</string>
     <string name="context_download_to" context="Menu item">Guardar en</string>
     <string name="context_clear_rubbish" context="Menu option">Vaciar la Papelera</string>    
+    <string name="clear_rubbish_confirmation" context="Ask for confirmation before removing all the elements of the rubbish bin">Todos los elementos de la papelera se eliminarán</string>
     <string name="context_send_link" context="get the link and send it">Enviar enlace</string>
     <string name="context_send" context="get the link and send it">Enviar</string>
     <string name="context_send_file_inbox" context="send the file to inbox">Enviar al buzón</string>
