--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -198,7 +198,8 @@
 	<string name="choose_folder_explorer" context="Title of the button in Incoming Shares tabs">Elige carpeta</string>
 	
 	<string name="file_browser_empty_cloud_drive" context="message when there are no files in the Cloud Drive">No hay archivos en tu Cloud Drive</string>
-	<string name="file_browser_empty_rubbish_bin" context="message when there are no files in the Rubbish Bin">Vaciar Papelera</string>
+	<string name="file_browser_empty_rubbish_bin" context="option to empty rubbish bin">Vaciar Papelera</string>
+	<string name="empty_rubbish_bin" context="message when there are no files in the Rubbish Bin">Papelera vacía</string>
 	<string name="file_browser_empty_incoming_shares" context="message when there are no incoming shared folders">No hay carpetas compartidas contigo</string>
 	<string name="file_browser_empty_outgoing_shares" context="message when there are no outgoing shared folders">No hay carpetas compartidas con otros</string>
     <string name="file_browser_empty_folder" context="Text that indicates that a folder is currently empty">Carpeta vacía</string>
