--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -134,8 +134,8 @@
     
     
     <string name="login_text" context="Login button">Login</string>
-    <string name="email_text" context="email label">e-mail</string>
-    <string name="password_text" context="password label">password</string>
+    <string name="email_text" context="email label">E-mail</string>
+    <string name="password_text" context="password label">Password</string>
     <string name="confirm_password_text" context="label shown in the confirmation of the password when creating an account">Confirm password</string>
     <string name="abc" context="in the password edittext the user can see the password or asterisks. ABC shows the letters of the password">ABC</string>
     <string name="dots" context="in the password edittext the user can see the password or asterisks. ··· shows asterisks instead of letters">···</string>
@@ -167,7 +167,7 @@
     <string name="tour_access_text">Get fully encrypted access anywhere, anytime</string>
     
     <string name="create_account_text" context="button that allows the user to create an account">Create account</string>
-    <string name="name_text" context="Name of the user">name</string>
+    <string name="name_text" context="Name of the user">Name</string>
     <string name="tos" context="text placed on the checkbox of acceptation of the Terms of Service">I agree with MEGA\'s Terms of Service</string>
     <string name="already_account" context="Does the user already have a MEGA account">Already have an account?</string>
     
