--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -30,6 +30,7 @@
    	<string name="general_leave" context="button">Leave</string>
    	<string name="general_decryp" context="button">Decrypt</string>
    	<string name="general_export" context="button">Export</string>
+
     <string name="general_empty" context="Button to delete the contents of the trashbin. Can also be translated as &quot;clear&quot;">Empty</string>
     <string name="general_loading" context="state previous to import a file">Loading&#8230;</string>
     <string name="general_importing" context="state while importing the file">Importing&#8230;</string>
@@ -132,7 +133,8 @@
         <item quantity="other" context="used for example when a folder is shared with 2 or more users">users</item>
     </plurals>
     
-    
+    <string name="confirmation_required" context="Alert before download">Confirmation required</string>
+     
     <string name="login_text" context="Login button">Login</string>
     <string name="email_text" context="email label">E-mail</string>
     <string name="password_text" context="password label">Password</string>
